[gd_scene load_steps=2 format=3 uid="uid://c7044ht18qo7i"]

[ext_resource type="Script" path="res://LobbyDeEspera.gd" id="1_pcups"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = 12.0
offset_right = -9.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pcups")

[node name="Start" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 456.0
offset_top = 373.0
offset_right = 609.0
offset_bottom = 434.0
text = "Start Game"

[node name="Slot1" type="Label" parent="."]
layout_mode = 0
offset_left = 167.0
offset_top = 306.0
offset_right = 296.0
offset_bottom = 336.0
text = "Player Name"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 99.0
offset_bottom = 190.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Slot2" type="Label" parent="."]
layout_mode = 0
offset_left = 365.0
offset_top = 305.0
offset_right = 494.0
offset_bottom = 335.0
text = "Player Name"

[node name="Slot3" type="Label" parent="."]
layout_mode = 0
offset_left = 579.0
offset_top = 303.0
offset_right = 708.0
offset_bottom = 333.0
text = "Player Name"

[node name="Slot4" type="Label" parent="."]
layout_mode = 0
offset_left = 783.0
offset_top = 302.0
offset_right = 912.0
offset_bottom = 332.0
text = "Player Name"

[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
